# medi_assistant

./: .coverage  .gitignore  CLAUDE.md  PLAN_integracji_medicover_ha.md  README.md  hacs.json  medichaser.py  pyproject.toml  requirements_dev.txt  requirements_test.txt
.github/: dependabot.yml
.github/workflows/: ci.yml
custom_components/medi_assistant/: __init__.py  api.py  button.py  config_flow.py  const.py  coordinator.py  diagnostics.py  exceptions.py  manifest.json  sensor.py  store.py  strings.json  token_keepalive.py
custom_components/medi_assistant/translations/: en.json  pl.json
tests/: conftest.py  test_api.py  test_api_login.py  test_button.py  test_config_flow.py  test_coordinator.py  test_diagnostics.py  test_init.py  test_sensor.py  test_store.py  test_subentry_flow.py  test_token_keepalive.py
tests/fixtures/: filters.json  oidc_config.json  personal_data.json  slots.json
